--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>This is my website</h1>
-<p>Hello my name is Jonathan and this is my website!.</p>
+<p>Hello World!.</p>
 
 </body>
 </html>
