--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>My Name Here.</title>
+	<title>Jonathan Guardado Agredano's website.</title>
 
 	<link rel="stylesheet" media="screen" href="styles.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
@@ -53,8 +53,8 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>My Name Here</h1>
-			<h2>My tagline here</h2>
+			<h1>Jonathan's website</h1>
+			<h2>Where creativity meets code</h2>
 		</header>
 
 		<div class="summary" id="zen-summary" role="article">
@@ -89,11 +89,11 @@
 			<p>Words words words</p>        </div>
 
 		<footer>
-			<a href="Put CodeWars Profile URL HerE"title="My Codewars Profile" class="zen-validate-html">CodeWars</a>
-			<a href="Put GitHub Profile URL Here" title="My GitHub Profile" class="zen-validate-css">GitHub</a>
-			<a href="Linked In Profile URL here" title="My Linked In Profile" class="zen-accessibility">LinkedIn</a>
-			<a href="Another Social Media URL Here" title="Social Media Name" class="zen-accessibility">Other 1</a>
-            <a href="Another Social Media URL Here" title="Social Media Name" class="zen-accessibility">Other 2</a>
+			<a href="https://www.codewars.com/users/Guar2819"title="My Codewars Profile" class="zen-validate-html">CodeWars</a>
+			<a href="https://github.com/Guar2819" title="My GitHub Profile" class="zen-validate-css">GitHub</a>
+			<a href="https://www.linkedin.com/in/jonathan-guardado-agredano-10403832a/" title="My Linked In Profile" class="zen-accessibility">LinkedIn</a>
+			<a href="https://www.nitrotype.com/racer/703a00d67d47482e47eac09fc91efe5a" title="Nitro type profile" class="zen-accessibility">Nitro Type</a>
+            <a href="https://www.youtube.com/@jonathanguardado5420" title="YouTube channel" class="zen-accessibility">YouTube</a>
 		</footer>
 
 	</div>
