--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </section>
     <section id="social-media" class="social-media">
         <h2>Find my accounts here!</h2>
-        <p>Hello this is a<a href="https://www.youtube.com/watch?v=BBJa32lCaaY">test</a> run.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ci6ZtPAN0PM?si=j6mAhO2cI2Rky4Pi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Hello this is a<a href="https://www.youtube.com/watch?v=U6MFMZedaco">test</a> run.</p>
+        <iframe width="560" height="315" src="20240602_152123-300x300.jpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
         
         <br>
