--- a/index.html
+++ b/index.html
@@ -5,25 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Arial, "Helvetica Neue", sans-serif;
             background-color: #001f3f;
             color: white;
+            line-height: 1.6;
+            background: linear-gradient(to bottom, #001f3f, #003366);
         }
         .navbar {
             position: fixed;
             top: 0;
             width: 100%;
             background: linear-gradient(to right, cyan, purple, green);
-            padding: 10px;
+            padding: 15px;
             text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            z-index: 1000;
         }
         .navbar a {
             color: white;
             text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
+            margin: 0 20px;
+            font-size: 20px;
+            transition: all 0.3s ease;
+            padding: 8px 15px;
+            border-radius: 5px;
+        }
+        .navbar a:hover {
+            color: #001f3f;
+            font-weight: bold;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+            background: rgba(255, 255, 255, 0.2);
+        }
+        .navbar-title {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
         }
         .welcome-section {
             display: flex;
@@ -32,63 +54,243 @@
             height: 100vh;
             background: linear-gradient(to bottom, cyan, purple);
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+        .welcome-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.1), transparent);
+            z-index: 1;
+        }
+        .welcome-section h1 {
+            font-size: 3em;
+            padding: 30px;
+            animation: fadeIn 2s ease-in;
+            position: relative;
+            z-index: 2;
+            background: rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+        .profile-section {
+            padding: 70px;
+            text-align: center;
+            background: #1a0033;
+            border-top: 2px solid cyan;
+        }
+        .profile-section img {
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            margin-bottom: 25px;
+            border: 4px solid cyan;
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+        }
+        .profile-section p {
+            max-width: 700px;
+            margin: 0 auto;
+            font-size: 1.3em;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .skills-section {
+            padding: 70px;
+            text-align: center;
+            background: #002080;
+            border-top: 2px solid cyan;
+        }
+        .skills-section ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 25px;
+        }
+        .skills-section li {
+            background: white;
+            color: #001f3f;
+            padding: 12px 25px;
+            border-radius: 25px;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+        }
+        .skills-section li:hover {
+            transform: translateY(-5px);
         }
         .projects {
-            padding: 50px;
+            padding: 70px;
             text-align: center;
             background: darkviolet;
+            border-top: 2px solid cyan;
         }
         .project-tile {
-            margin: 20px;
-            padding: 15px;
+            margin: 25px;
+            padding: 20px;
             background: white;
             color: black;
             display: inline-block;
+            border-radius: 15px;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
+            transition: transform 0.3s ease;
+        }
+        .project-tile:hover {
+            transform: scale(1.05);
+        }
+        .project-tile a {
+            text-decoration: none;
+            color: #001f3f;
+            font-weight: bold;
         }
         .social-media {
-            padding: 30px;
+            padding: 50px;
             text-align: center;
             background: purple;
+            border-top: 2px solid cyan;
         }
         .social-media a {
             color: cyan;
-            font-size: 20px;
-            margin: 0 15px;
+            font-size: 22px;
+            margin: 0 20px;
             text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .social-media a:hover {
+            color: white;
+            text-shadow: 0 0 10px cyan;
+        }
+        .social-media iframe {
+            display: block;
+            margin: 25px auto;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+        }
+        .btn {
+            display: inline-block;
+            padding: 12px 25px;
+            background: cyan;
+            color: #001f3f;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: bold;
+            transition: background 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0, 255, 255, 0.5);
+        }
+        .btn:hover {
+            background: white;
+            color: #001f3f;
+            box-shadow: 0 4px 15px rgba(255, 255, 255, 0.7);
+        }
+        footer {
+            padding: 30px;
+            text-align: center;
+            background: #001a33;
+            font-size: 1em;
+            border-top: 2px solid cyan;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
+        }
+        footer a {
+            color: cyan;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.1em;
+            transition: color 0.3s ease;
+        }
+        footer a:hover {
+            color: white;
+        }
+        h2 {
+            font-size: 2.5em;
+            margin-bottom: 30px;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
         }
         @media (max-width: 600px) {
             .navbar a {
                 display: block;
-                margin: 10px 0;
+                margin: 12px 0;
+            }
+            .welcome-section h1 {
+                font-size: 2em;
+            }
+            .project-tile {
+                width: 100%;
+                box-sizing: border-box;
+            }
+            .social-media iframe {
+                width: 100%;
+                height: auto;
+            }
+            .skills-section ul {
+                flex-direction: column;
+                gap: 15px;
+            }
+            .profile-section {
+                padding: 40px;
+            }
+            .skills-section {
+                padding: 40px;
+            }
+            .projects {
+                padding: 40px;
+            }
+            .social-media {
+                padding: 30px;
             }
         }
     </style>
 </head>
 <body>
     <div class="navbar">
+        <div class="navbar-title">Jonathan Guardado Agredano's Website</div>
         <a href="#welcome-section">Home</a>
+        <a href="#profile-section">About</a>
+        <a href="#skills-section">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#social-media">Contact</a>
     </div>
     <section id="welcome-section" class="welcome-section">
-        <h1>Hello! My name is Jonathan Guardado Agredano and this is my website I am making, It's still in progress but I will keep adding changes as I go through my website.</h1>
+        <h1>Hello, my name is Jonathan Guardado Agredano and I will be updating my portfolio project daily, stay tuned for more updates! Last update: March 5th, 2025</h1>
+    </section>
+    <section id="profile-section" class="profile-section">
+        <h2>About Me</h2>
+        <img src="https://via.placeholder.com/150" alt="Profile Picture">
+        <p>I'm a passionate developer working on building my skills in web development, coding, and problem-solving. This portfolio showcases my journey and projects as I grow in the tech world.</p>
+    </section>
+    <section id="skills-section" class="skills-section">
+        <h2>My Skills</h2>
+        <ul>
+        </ul>
     </section>
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-tile">
-            <a href="#">Project 1</a>
+            <a href="https://example.com" target="_blank" class="btn">Project 1</a>
         </div>
     </section>
     <section id="social-media" class="social-media">
         <h2>Find my accounts here!</h2>
-        <p>Hello this is a<a href="https://www.youtube.com/watch?v=U6MFMZedaco">test</a> run.</p>
-        <iframe width="560" height="315" src="20240602_152123-300x300.jpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        
-        
+        <p>Hello this is a <a href="https://www.youtube.com/watch?v=U6MFMZedaco">click to</a> run.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/U6MFMZedaco" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <br>
-        <a href="https://github.com/Guar2819" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/jonathan-guardado-agredano-10403832a/" target="_blank">LinkedIn</a>
-        <a href="https://www.codewars.com/users/Guar2819" target="_blank">CodeWars</a>
+        <a href="https://github.com/Guar2819" target="_blank" class="btn">GitHub</a>
+        <a href="https://www.linkedin.com/in/jonathan-guardado-agredano-10403832a/" target="_blank" class="btn">LinkedIn</a>
+        <a href="https://www.codewars.com/users/Guar2819" target="_blank" class="btn">CodeWars</a>
     </section>
+    <footer>
+        <p>© 2025 Jonathan Guardado Agredano. All rights reserved.</p>
+        <a href="#welcome-section">Back to Top</a>
+        <a href="mailto:example@email.com">Email Me</a>
+    </footer>
 </body>
 </html>
