--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </section>
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
-        <img src="https://via.placeholder.com/150" alt="Profile Picture">
+        <img src="file:///C:/Users/Jguar312/Downloads/1739317330409%20(1).jpg" alt="Profile Picture">
         <p>I'm a passionate developer working on building my skills in web development, coding, and problem-solving. This portfolio showcases my journey and projects as I grow in the tech world.</p>
     </section>
     <section id="skills-section" class="skills-section">
