--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
         body {
             margin: 0;
             font-family: Arial, "Helvetica Neue", sans-serif;
-            background-color: #001f3f;
+            background-color: #000000;
             color: white;
             line-height: 1.6;
-            background: linear-gradient(to bottom, #001f3f, #003366);
+            background: linear-gradient(to bottom, #000000, #1a1a1a);
             overflow-x: hidden;
         }
         .navbar {
             position: fixed;
             top: 0;
             width: 100%;
-            background: linear-gradient(to right, cyan, purple, green);
+            background: linear-gradient(to right, #FFD700, #FF0000, #000000);
             padding: 15px;
             text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 2px 10px rgba(255, 215, 0, 0.3);
             z-index: 1000;
             animation: slideIn 1s ease-out;
         }
@@ -57,7 +57,7 @@
             width: 100%;
         }
         .navbar a:hover {
-            color: #001f3f;
+            color: #000000;
             font-weight: bold;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
             background: rgba(255, 255, 255, 0.2);
@@ -78,7 +78,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(to bottom, cyan, purple);
+            background: linear-gradient(to bottom, #FFD700, #FF0000);
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -122,8 +122,8 @@
         .profile-section {
             padding: 70px 20px;
             text-align: center;
-            background: #1a0033;
-            border-top: 2px solid cyan;
+            background: #1a0000;
+            border-top: 2px solid #FFD700;
             position: relative;
         }
         .profile-section::before {
@@ -133,7 +133,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="rgba(0,255,255,0.1)"/></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="rgba(255,215,0,0.1)"/></svg>');
             opacity: 0.1;
             z-index: 0;
         }
@@ -142,13 +142,13 @@
             height: 180px;
             border-radius: 50%;
             margin-bottom: 25px;
-            border: 4px solid cyan;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+            border: 4px solid #FFD700;
+            box-shadow: 0 0 20px rgba(255, 215, 0, 0.5);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
         .profile-section img:hover {
             transform: rotate(360deg);
-            box-shadow: 0 0 30px rgba(0, 255, 255, 0.8);
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.8);
         }
         .profile-section p {
             max-width: 700px;
@@ -169,8 +169,8 @@
         .skills-section {
             padding: 70px 20px;
             text-align: center;
-            background: #002080;
-            border-top: 2px solid cyan;
+            background: #330000;
+            border-top: 2px solid #FFD700;
         }
         .skills-section ul {
             list-style: none;
@@ -182,7 +182,7 @@
         }
         .skills-section li {
             background: white;
-            color: #001f3f;
+            color: #000000;
             padding: 12px 25px;
             border-radius: 25px;
             font-weight: bold;
@@ -198,7 +198,7 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: rgba(0, 255, 255, 0.2);
+            background: rgba(255, 215, 0, 0.2);
             transform: rotate(30deg);
             transition: all 0.5s ease;
             opacity: 0;
@@ -210,13 +210,13 @@
         }
         .skills-section li:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 15px rgba(0, 255, 255, 0.5);
+            box-shadow: 0 6px 15px rgba(255, 215, 0, 0.5);
         }
         .projects {
             padding: 70px 20px;
             text-align: center;
-            background: darkviolet;
-            border-top: 2px solid cyan;
+            background: #FF0000;
+            border-top: 2px solid #FFD700;
             position: relative;
         }
         .project-tile {
@@ -233,11 +233,11 @@
         }
         .project-tile:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 20px rgba(0, 255, 255, 0.5);
+            box-shadow: 0 8px 20px rgba(255, 215, 0, 0.5);
         }
         .project-tile a {
             text-decoration: none;
-            color: #001f3f;
+            color: #000000;
             font-weight: bold;
             position: relative;
         }
@@ -255,11 +255,11 @@
         .social-media {
             padding: 50px 20px;
             text-align: center;
-            background: purple;
-            border-top: 2px solid cyan;
+            background: #800000;
+            border-top: 2px solid #FFD700;
         }
         .social-media a {
-            color: cyan;
+            color: #FFD700;
             font-size: 22px;
             margin: 0 20px;
             text-decoration: none;
@@ -268,7 +268,7 @@
         }
         .social-media a:hover {
             color: white;
-            text-shadow: 0 0 10px cyan;
+            text-shadow: 0 0 10px #FFD700;
             transform: scale(1.1);
         }
         .social-media iframe {
@@ -286,19 +286,19 @@
         .btn {
             display: inline-block;
             padding: 15px 30px;
-            background: linear-gradient(45deg, cyan, #00ffcc);
+            background: linear-gradient(45deg, #FFD700, #FF4500);
             color: white;
             text-decoration: none;
             border-radius: 12px;
             font-weight: bold;
             font-size: 1.2em;
-            transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 12px rgba(0, 255, 255, 0.7);
+            transition: 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 12px rgba(255, 215, 0, 0.7);
             position: relative;
             overflow: hidden;
             margin: 10px;
             text-transform: uppercase;
-            border: 2px solid #00ffff;
+            border: 2px solid #FFD700;
         }
         .btn::before {
             content: '';
@@ -317,22 +317,22 @@
             height: 400px;
         }
         .btn:hover {
-            background: linear-gradient(45deg, white, #e0ffff);
-            color: #001f3f;
-            box-shadow: 0 6px 20px rgba(255, 255, 255, 0.9);
+            background: linear-gradient(45deg, white, #FFD700);
+            color: #000000;
+            box-shadow: 0 6px 20px rgba(255, 215, 0, 0.9);
             transform: translateY(-4px) scale(1.05);
         }
         footer {
             padding: 30px 20px;
             text-align: center;
-            background: #001a33;
+            background: #1a1a1a;
             font-size: 1em;
-            border-top: 2px solid cyan;
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
+            border-top: 2px solid #FFD700;
+            box-shadow: 0 -2px 10px rgba(255, 215, 0, 0.3);
             position: relative;
         }
         footer a {
-            color: cyan;
+            color: #FFD700;
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.1em;
@@ -353,7 +353,7 @@
             position: absolute;
             width: 50px;
             height: 3px;
-            background: cyan;
+            background: #FFD700;
             bottom: -10px;
             left: 50%;
             transform: translateX(-50%);
@@ -461,7 +461,7 @@
     </section>
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
-        <img src="file:///C:/Users/Jguar312/Downloads/f31957793beb3d5a80ec70ba8cf5b03b-300x300.jpg" alt="Profile Picture">
+        <img src="file:///C:/Users/jguar312/Downloads/20240602_152123.jpg" alt="Profile Picture">
         <p>I'm a passionate developer working on building my skills in web development, coding, and problem-solving. This portfolio showcases my journey and projects as I grow in the tech world.</p>
     </section>
     <section id="skills-section" class="skills-section">
@@ -470,7 +470,7 @@
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-tile">
-            <a href="https://example.com" target="_blank" class="btn">Project 1</a>
+            <a href="file:///C:/Users/jguar312/Downloads/photo-1560177776-55a762c5c000.jpg" target="_blank" class="btn">Project 1</a>
         </div>
     </section>
     <section id="social-media" class="social-media">
