--- a/index.html
+++ b/index.html
@@ -445,6 +445,42 @@
                 font-size: 1.8em;
             }
         }
+        .favorites-section {
+            padding: 70px 20px;
+            text-align: center;
+            background: #4B0000;
+            border-top: 2px solid #FFD700;
+        }
+        .favorites-section ul {
+            list-style: none;
+            padding: 0;
+            max-width: 700px;
+            margin: 20px auto;
+            text-align: left;
+        }
+        .favorites-section li {
+            font-size: 1.2em;
+            margin: 15px 0;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 15px;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+        .favorites-section li:hover {
+            transform: translateX(10px);
+        }
+        .favorites-section img {
+            width: 300px;
+            height: auto;
+            border-radius: 15px;
+            margin-top: 20px;
+            border: 4px solid #FFD700;
+            box-shadow: 0 0 20px rgba(255, 215, 0, 0.5);
+            transition: transform 0.3s ease;
+        }
+        .favorites-section img:hover {
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
@@ -462,7 +498,7 @@
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
         <img src="file:///C:/Users/jguar312/Downloads/20240602_152123-300x300.jpg" alt="Profile Picture">
-        <p>I'm a passionate developer working on building my skills in web development, coding, and problem-solving. This portfolio showcases my journey and projects as I grow in the tech world.</p>
+        <p>I want to change the world knowing that I have enough knowledge to prove myself I am always following my dreams.</p>
     </section>
     <section id="skills-section" class="skills-section">
         <h2>My Skills</h2>
@@ -481,6 +517,16 @@
         <a href="https://github.com/Guar2819" target="_blank" class="btn">GitHub</a>
         <a href="https://www.linkedin.com/in/jonathan-guardado-agredano-10403832a/" target="_blank" class="btn">LinkedIn</a>
         <a href="https://www.codewars.com/users/Guar2819" target="_blank" class="btn">CodeWars</a>
+    </section>
+    <section id="favorites-section" class="favorites-section">
+        <h2>My Favorites</h2>
+        <ul>
+            <li>Favorite Hobby: Sing</li>
+            <li>Favorite Place: The Beach</li>
+            <li>Favorite Food: Cheeseburger</li>
+            <li>Best Memory: Going to Mexico to visit my mom and my two brothers</li>
+        </ul>
+        <img src="file:///C:/Users/jguar312/Downloads/20240602_152123-300x300.jpg" alt="Best Memory Photo">
     </section>
     <footer>
         <p>© 2025 Jonathan Guardado Agredano. All rights reserved.</p>
