Fix image links

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     </section>
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
-        <img src="file:///C:/Users/jguar312/Downloads/20240602_152123-300x300.jpg" alt="Profile Picture">
+        <img src="video-game-combatant.jpg" alt="Profile Picture">
         <p>I want to change the world knowing that I have enough knowledge to prove myself I am always following my dreams.</p>
     </section>
     <section id="skills-section" class="skills-section">
@@ -526,7 +526,7 @@
             <li>Favorite Food: Cheeseburger</li>
             <li>Best Memory: Going to Mexico to visit my mom and my two brothers</li>
         </ul>
-        <img src="file:///C:/Users/jguar312/Downloads/20240602_152123-300x300.jpg" alt="Best Memory Photo">
+        <img src="jonathan-and-joan-2024.jpg" alt="Best Memory Photo">
     </section>
     <footer>
         <p>© 2025 Jonathan Guardado Agredano. All rights reserved.</p>
