--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
         <a href="https://github.com/Guar2819" target="_blank" class="btn">GitHub</a>
         <a href="https://www.linkedin.com/in/jonathan-guardado-agredano-10403832a/" target="_blank" class="btn">LinkedIn</a>
         <a href="https://www.codewars.com/users/Guar2819" target="_blank" class="btn">CodeWars</a>
+        <a href="https://open.spotify.com/user/jaguar220807" target="_blank" class="btn">Spotify</a>
     </section>
     <section id="favorites-section" class="favorites-section">
         <h2>My Favorites</h2>
