--- a/index.html
+++ b/index.html
@@ -481,6 +481,9 @@
         .favorites-section img:hover {
             transform: scale(1.05);
         }
+        #current-date {
+            font-size: 1.8em;
+        }
     </style>
 </head>
 <body>
